syntax = "proto3";
import "google/protobuf/timestamp.proto";

package ecliptix.proto.security;
option csharp_namespace = "Ecliptix.Protobuf.Security";

message SecureRequest {
  bytes encrypted_payload = 1;
  
  bytes signature = 2;
  
  bytes client_public_key = 3;
  
  google.protobuf.Timestamp timestamp = 4;
  
  bytes nonce = 5;
  
  SignatureAlgorithm signature_algorithm = 6;
  
  EncryptionAlgorithm encryption_algorithm = 7;
  
  uint32 version = 8;

  enum SignatureAlgorithm {
    ECDSA_WITH_SHA256 = 0;
    ECDSA_WITH_SHA384 = 1;
    ECDSA_WITH_SHA512 = 2;
    RSA_PSS_WITH_SHA256 = 3;
    RSA_PSS_WITH_SHA384 = 4;
  }

  enum EncryptionAlgorithm {
    RSA_OAEP_WITH_SHA256 = 0;
    RSA_OAEP_WITH_SHA384 = 1;
    AES256_GCM_WITH_ECDH = 2;
  }
}

message SecureResponse {
  bytes encrypted_payload = 1;
  
  bytes signature = 2;
  
  google.protobuf.Timestamp timestamp = 3;
  
  SecureStatus status = 4;
  
  uint32 version = 5;
}

enum SecureStatus {
  SUCCESS = 0;
  INVALID_SIGNATURE = 1;
  DECRYPTION_FAILED = 2;
  REPLAY_ATTACK = 3;
  UNSUPPORTED_ALGORITHM = 4;
  INTERNAL_ERROR = 5;
}